--- a/web/package.json
+++ b/web/package.json
@@ -5,9 +5,11 @@
   "description": "The main web app for fhfhockey.com",
   "scripts": {
     "dev": "next dev --turbopack -H 0.0.0.0 -p 3000",
+    "dev:3001": "next dev --turbopack -H 0.0.0.0 -p 3001",
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
+    "start:3001": "next start -p 3001",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
