--- a/web/package.json
+++ b/web/package.json
@@ -70,6 +70,7 @@
     "node-html-parser": "^5.4.2",
     "nodemailer": "^7.0.0",
     "notistack": "^2.0.8",
+    "npm": "^11.7.0",
     "oauth-1.0a": "^2.2.6",
     "p-limit": "^6.2.0",
     "papaparse": "^5.4.1",
@@ -124,7 +125,7 @@
     "sass": "^1.53.0",
     "storybook": "^8.5.3",
     "ts-node": "^10.9.2",
-    "typescript": "5.7",
+    "typescript": "5.7.3",
     "vite-tsconfig-paths": "^4.3.1",
     "vitest": "^3.0.7"
   }
